<?xml version="1.0"?>
<package format="2">
  <name>detection_visualizer</name>
  <version>0.2.0</version>
  <description>Visualizes detections on an image</description>

  <author email="sloretz@openrobotics.org">Shane Loretz</author>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>

  <license>Apache License 2.0</license>

  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>image_transport</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

